--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  padding: 0;
 }
 
 table {
@@ -19,6 +20,8 @@ th {
   background-color: #f0f0f0;
   border: 1px solid #e0e0e0;
   border-bottom: 1px solid #111;
+  position: sticky;
+  top: 0;
 }
 
 td {
